objects/Pen__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <formula>Customer_Name__c &amp; ' :  ' &amp;  Comments__c</formula>
        <label>Customer Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <inlineHelpText>Enter customer name</inlineHelpText>
        <label>Customer Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pen_Class__c</fullName>
        <formula>IF(Pen_Cost__c = 0, 'Promotion',  IF( AND(Pen_Cost__c &gt;0 ,  Customer_Name__c  = 'hp') , 'Premium', 'Paid') )</formula>
        <label>Pen Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pen_Cost__c</fullName>
        <label>Pen Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pen</label>
    <nameField>
        <label>Pen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Pen_Cost__c</columns>
        <columns>Comments__c</columns>
        <columns>Customer_Comments__c</columns>
        <columns>Pen_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>